--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://www.instagram.com/torqscrew/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="http://linkedin.com/in/torqscrew-pict-s-automobile-club-b81815216" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 				</ul>
 
 			</footer>
